web commit by JoshTriplett: Fix typo.

--- a/doc/plugins/table.mdwn
+++ b/doc/plugins/table.mdwn
@@ -1,7 +1,7 @@
 [[template id=plugin name=table author="[[VictorMoral]]"]]
 [[tag type/format]]
 
-This plugin can build html tables from data in CSV (comma-separated values)
+This plugin can build HTML tables from data in CSV (comma-separated values)
 or DSV (delimiter-separated values) format.
 
 It needs the perl module [[cpan Text::CSV]] for the CSV data.
