--- a/doc/plugins/table.mdwn
+++ b/doc/plugins/table.mdwn
@@ -9,9 +9,9 @@ It needs the perl module [[cpan Text::CSV]] for the CSV data.
 ## examples
 
 	\[[table data="""
-	Customer|Amount|
-	Fulanito|134,34|
-	Menganito|234,56|
+	Customer|Amount
+	Fulanito|134,34
+	Menganito|234,56
 	"""]]
     
 	\[[table class="book_record" format=csv file="data/books/record1"]]
