--- a/doc/plugins/table.mdwn
+++ b/doc/plugins/table.mdwn
@@ -12,6 +12,7 @@ It needs the perl module [[cpan Text::CSV]] for the CSV data.
 	Customer|Amount
 	Fulanito|134,34
 	Menganito|234,56
+	Menganito|234,56
 	"""]]
     
 	\[[table class="book_record" format=csv file="data/books/record1"]]
@@ -21,6 +22,15 @@ In this second example the `record1` page should be similar to:
 	"Title","Perl Best Practices"
 	"Author","Damian Conway"
 	"Publisher","O’Reilly"
+
+To make a cell span multiple columns, follow it with one or more empty
+cells. For example:
+
+	\[[table data="""
+	left||right|
+	a|b|c|d
+	this cell spans 4 columns|||
+	"""]]
 
 ## usage
 
