--- a/doc/plugins/table.mdwn
+++ b/doc/plugins/table.mdwn
@@ -41,5 +41,5 @@ cells. For example:
 * `delimiter` - The character used to separate fields. By default,
    DSV format uses a pipe (`|`), and CSV uses a comma (`,`).
 * `class` - A CSS class for the table html element.
-* `header` - Set to 0 to make a table without a header. By default,
+* `header` - Set to "no" to make a table without a header. By default,
   the first data line is used as the table header.
