web commit by http://joey.kitenet.net/: test commit

--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -2,6 +2,8 @@ A few bits about the RCS backends
 
 [[toc ]]
 
+[[foo]]
+
 ## Terminology
 
 ``web-edit'' means that a page is edited by using the web (CGI) interface
