* The underscore escaping support exposed a bug in edit links: Such links   were titlepage escaped in the urls, and then doubly escaped by the CGI   when editing. To fix this, I removed the titlepage escaping in the edit   urls. * That means that *every edit link* on the wiki is potentially changed.   Rebuilding wikis on upgrade to this version therefore necessary; enabled   that in postinst.

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,11 +1,19 @@
+ikiwiki (1.45) unstable; urgency=low
+
+  Wikis need to be rebuilt on upgrade to this version. If you listed your wiki
+  in /etc/ikiwiki/wikilist this will be done automatically when the Debian
+  package is upgraded. Or use ikiwiki-mass-rebuild to force a rebuild.
+
+ -- Joey Hess <joeyh@debian.org>  Wed,  7 Mar 2007 23:02:52 -0500
+
 ikiwiki (1.44) unstable; urgency=low
 
-   The htmllink() function has changed slightly and plugins that use it may
-   need to change how they call it. This function's first three parameters
-   are unchanged, but additional options are now passed using named
-   parameters. If you used htmllink with more than 3 parameters, you will
-   need to change it. The plugin interface version has been increased to 1.02
-   to reflect this change.
+  The htmllink() function has changed slightly and plugins that use it may
+  need to change how they call it. This function's first three parameters
+  are unchanged, but additional options are now passed using named
+  parameters. If you used htmllink with more than 3 parameters, you will
+  need to change it. The plugin interface version has been increased to 1.02
+  to reflect this change.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 19 Feb 2007 21:10:12 -0500
 
