web commit by JoshTriplett: Add hoogle, the Haskell code search engine.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -13,6 +13,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
+* [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
 * [[shortcut name=iki url="http://ikiwiki.info/%s.html"]]
 * [[shortcut name=ljuser url="http://%s.livejournal.com/"]]
 * [[shortcut name=rfc url="http://www.ietf.org/rfc/rfc%s.txt"]]
