--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -20,6 +20,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=c2 url="http://c2.com/cgi/wiki?%s"]]
 * [[shortcut name=meatballwiki url="http://www.usemod.com/cgi-bin/mb.pl?%s"]]
 * [[shortcut name=emacswiki url="http://www.emacswiki.org/cgi-bin/wiki/%s"]]
+* [[shortcut name=haskellwiki url="http://haskell.org/haskellwiki/%s"]]
 * [[shortcut name=dict url="http://www.dict.org/bin/Dict?Form=Dict1&Strategy=*&Database=*&Query=%s"]]
 * [[shortcut name=imdb url="http://imdb.com/find?q=%s"]]
 * [[shortcut name=gpg url="http://pgpkeys.mit.edu:11371/pks/lookup?op=vindex&exact=on&search=0x%s"]]
