web commit by JoshTriplett: Add GNOME bugzilla.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -11,6 +11,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=debpts url="http://packages.qa.debian.org/%s"]]
 * [[shortcut name=fdobug url="https://bugs.freedesktop.org/show_bug.cgi?id=%s" desc="freedesktop.org bug #%s"]]
 * [[shortcut name=fdolist url="http://lists.freedesktop.org/mailman/listinfo/%s" desc="%s@lists.freedesktop.org"]]
+* [[shortcut name=gnomebug url="http://bugzilla.gnome.org/show_bug.cgi?id=%s" desc="GNOME bug #%s"]]
 * [[shortcut name=cpan url="http://search.cpan.org/search?mode=dist&query=%s"]]
 * [[shortcut name=ctan url="http://tug.ctan.org/cgi-bin/ctanPackageInformation.py?id=%s"]]
 * [[shortcut name=hoogle url="http://haskell.org/hoogle/?q=%s"]]
