--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ ikiwiki (1.45) UNRELEASED; urgency=low
     image using width and height attributes.
   * Also fixes img preview display, the links were wrong in preview before.
   * Add a sparkline plugin.
+  * Add a postsparkline plugin.
   * The slash escaping when adding to a blog from the CGI was not working
     since it ended up being double-escaped. Instead, just remove slashes.
   * Fix some nasty issues with page name escaping during previewing
