suggest as a soc project

--- a/doc/patchqueue/darcs.mdwn
+++ b/doc/patchqueue/darcs.mdwn
@@ -1,5 +1,7 @@
 Here's Thomas Schwinge unfinished darcs support for ikiwiki.
 
+(Finishing this has been succested as a [[soc]] project.)
+
 > I haven't been working on this for months and also won't in the near
 > future.  Feel free to use what I have done so
 > far and bring it into an usable state!  Also, feel free to contact me
