--- a/doc/patchqueue/darcs.mdwn
+++ b/doc/patchqueue/darcs.mdwn
@@ -1,6 +1,6 @@
 Here's Thomas Schwinge unfinished darcs support for ikiwiki.
 
-(Finishing this has been succested as a [[soc]] project.)
+(Finishing this has been suggested as a [[soc]] project.)
 
 > I haven't been working on this for months and also won't in the near
 > future.  Feel free to use what I have done so
@@ -9,6 +9,8 @@ Here's Thomas Schwinge unfinished darcs support for ikiwiki.
 
 -- [Thomas Schwinge](mailto:tschwinge@gnu.org)
 
+[[toggle text="show"]]
+[[toggleable text="""
 	# Support for the darcs rcs, <URL:http://darcs.net/>.
 	# Copyright (C) 2006  Thomas Schwinge <tschwinge@gnu.org>
 	#
@@ -198,3 +200,4 @@ Here's Thomas Schwinge unfinished darcs support for ikiwiki.
 	}
 	
 	1
+"""]]
