--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.45) UNRELEASED; urgency=low
+ikiwiki (1.45) unstable; urgency=low
 
   * Allow for underscores to appear in page titles, if encoded appropriately
     (__95__) in filenames. Previously, all underscores were replaced with
@@ -29,7 +29,7 @@ ikiwiki (1.45) UNRELEASED; urgency=low
   * Correct a deadlock that could occur in post-commit if the aggregate plugin
     was enabled and tried to lock the already locked wiki.
 
- -- Joey Hess <joeyh@debian.org>  Thu,  8 Mar 2007 05:57:49 -0500
+ -- Joey Hess <joeyh@debian.org>  Sat, 10 Mar 2007 21:11:05 -0500
 
 ikiwiki (1.44) unstable; urgency=low
 
