web commit by http://raymundo.egloos.com/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -91,3 +91,6 @@ what happens if i edit something with an openid set?
 -----------
 
 So what's the point? [[How is this different to any other WiKi|features]]
+
+----
+Test.. I was looking for a wiki supporting OpenID~ 
