web commit by http://thedaniel.livejournal.com/: added reference to my site

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -45,6 +45,7 @@ Personal sites and blogs
 * <http://iainmclaren.com>.
 * [formorers blog and website](http://www.formorer.de/webwiki/)
 * [Mark Jaroski's blog](http://movemearound.org/)
+* I keep my personal project notes and specs in a private ikiwiki - it's the perfect tool for this task. - [the daniel](http://neoglam.com)
 
 Please feel free to add your own ikiwiki site!
 
