web commit by http://sven.lankes.net/: changed lbw url to www

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -11,7 +11,7 @@ Projects
 * The [Sparse wiki](http://kernel.org/pub/linux/kernel/people/josh/sparse).
 * [The BSD Associate Admin Book Project](http://bsdwiki.reedmedia.net/)
 * The [maildirman wiki](http://svcs.cs.pdx.edu/maildirman)
-* The [linuxbierwanderung wiki/homepage](http://wiki.linuxbierwanderung.org)
+* The [linuxbierwanderung wiki/homepage](http://www.linuxbierwanderung.org)
 
 Personal sites and blogs
 ========================
