--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ ikiwiki (1.46) UNRELEASED; urgency=low
   * Fix a bug with inlined create page links, including Discussion links on
     blog post pages. The links will now create pages relative to the page that
     actually contains the link.
+  * French update. Closes: #414597
 
- -- Joey Hess <joeyh@debian.org>  Sat, 10 Mar 2007 23:56:23 -0500
+ -- Joey Hess <joeyh@debian.org>  Mon, 12 Mar 2007 15:52:33 -0400
 
 ikiwiki (1.45) unstable; urgency=low
 
