web commit by MarkusSchaber

--- a/doc/index/discussion.mdwn
+++ b/doc/index/discussion.mdwn
@@ -22,6 +22,9 @@ of via syslog?
 > Not sure why you'd want to do that, but couldn't you use a tool like
 > logwatch to mail selected lines from the syslog? --[[Joey]]
 
+> > The reason is that I'm not logged in on the web server regularly to
+> > check the log files. I'll see whether I can install a logwatch instance.
+
 ----
 # Excellent - how do I translate a TWiki site?
 
