web commit by http://id.inelegant.org/

--- a/doc/plugins/tag/discussion.mdwn
+++ b/doc/plugins/tag/discussion.mdwn
@@ -9,3 +9,7 @@ of `refresh()`. The hook could add the tag pages and re-run `refresh()`,
 taking appropriate care to avoid looping forever.
 
 --[[Joey]]
+
+Thanks. That works fine.
+
+--Ben
