--- a/doc/todo/Gallery.mdwn
+++ b/doc/todo/Gallery.mdwn
@@ -11,3 +11,13 @@ creating a gallery of a bunch of images:
 * Some javascript for easy navigation (see [photon](http://www.saillard.org/programs_and_patches/photon/) for a good example)
 
 It should be possible to disable every feature for every directory. 
+
+----
+
+This could be split into two distinct projects. One would be to modify the [[plugins/img]] img plugin to support some of these ideas for extracting and using information such as exif out of images. The other project would be to design something that handles setting up a gallery, which could be just some regular wiki pages using the img plugin, and perhaps some other custom plugins for things like ratings and javascript), and adding new images to a gallery as they are added to the wiki.
+
+That's one way to do it, and it has some nice benefits, like being able to edit the gallery pages like any wiki page, to add comments about images, links, etc. An example of ikiwiki being used like that: <http://kite/~family/pics/guaimaca.html> (still room for improvement, clearly).
+
+--[[Joey]]
+
+[[tag soc]]
