--- a/doc/bugs/svn-commit-hanging.mdwn
+++ b/doc/bugs/svn-commit-hanging.mdwn
@@ -1,3 +1,5 @@
 When I'm committing a page via the Web, Ikiwiki hangs at the `svn commit` stage. I'm sure that this is a result of all my local modifications, so there's no need to consider this a bug per se, but I'd be interested in hearing whether anybody else has seen this. -- [[Ben]]
 
 What kinds of local modifications are those? --[[Joey]]
+
+Many. ;-) I have the usedirs patch applied, about 10 minor patches to customise things that weren't otherwise customisable, and a custom SVN hook. As you would expect, the problem was the hook (which I'd forgotten about)... Pretend I was never here. ;-) -- [[Ben]] 
