--- a/doc/bugs/svn-commit-hanging.mdwn
+++ b/doc/bugs/svn-commit-hanging.mdwn
@@ -3,3 +3,5 @@ When I'm committing a page via the Web, Ikiwiki hangs at the `svn commit` stage.
 What kinds of local modifications are those? --[[Joey]]
 
 Many. ;-) I have the usedirs patch applied, about 10 minor patches to customise things that weren't otherwise customisable, and a custom SVN hook. As you would expect, the problem was the hook (which I'd forgotten about)... Pretend I was never here. ;-) -- [[Ben]] 
+
+[[bugs/done]] ;-) --[[Joey]]
