web commit by http://id.inelegant.org/: Suggestion for branch.

--- a/doc/patchqueue/index.html_allowed/discussion.mdwn
+++ b/doc/patchqueue/index.html_allowed/discussion.mdwn
@@ -8,3 +8,5 @@ if you import Foo.)
 Ethan
 
 +1 for this patch making it into trunk. --James
+
+While we're still testing this patch, what about creating a branch in the Ikiwiki SVN and applying the current patch? That'll make it easier to submit further patches that rely on the original. It will also allow us to experient without breaking the trunk. -- [[Ben]]
