--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -46,6 +46,7 @@ Personal sites and blogs
 * [formorers blog and website](http://www.formorer.de/webwiki/)
 * [Mark Jaroski's blog](http://movemearound.org/)
 * I keep my personal project notes and specs in a private ikiwiki - it's the perfect tool for this task. - [the daniel](http://neoglam.com)
+* [Schabis blaue Seite](http://schabi.de) - I abuse ikiwiki as blog/cms combo, and will migrate all existing content into ikiwiki eventually.
 
 Please feel free to add your own ikiwiki site!
 
