--- a/doc/bugs/assumes_system_perl.mdwn
+++ b/doc/bugs/assumes_system_perl.mdwn
@@ -8,3 +8,7 @@ make
 fails, as the 'make' command attempts to use the perl install in PATH, rather than the one ikiwiki is being installed for.
 
 The installed bin/ikiwiki file also refers to /usr/bin/perl rather than the perl it is being installed for.
+
+> I will acdept sufficiently nonintrusive patches to make ikiwiki work better on strange systems like
+> yours, but do not plan to work on it myself, since I do not use systems
+> where /usr/bin/perl is not a sane default. --[[Joey]]
