--- a/doc/bugs/newfile-test.mdwn
+++ b/doc/bugs/newfile-test.mdwn
@@ -8,5 +8,4 @@ Assume the script is called like this `http://example.com/ikiwiki.cgi?page=discu
 
 (To confirm that this wasn't just a result of my imagination, I created [[/discussion]] on this site; feel free to delete it now.) 
 
-> I always find bug reports more comprehansible if they describe actual
-> buggy behavior, which you've not done. Could you do so? Thanks. --[[Joey]]
+> [[bugs/done]] --[[Joey]]
