web commit by http://joey.kitenet.net/: more detail

--- a/doc/bugs/newfile-test.mdwn
+++ b/doc/bugs/newfile-test.mdwn
@@ -8,4 +8,4 @@ Assume the script is called like this `http://example.com/ikiwiki.cgi?page=discu
 
 (To confirm that this wasn't just a result of my imagination, I created [[/discussion]] on this site; feel free to delete it now.) 
 
-> [[bugs/done]] --[[Joey]]
+> I've fixed it to only look for an existing page if it's not creating a new page, so [[bugs/done]] --[[Joey]]
