--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,10 @@ ikiwiki (1.46) UNRELEASED; urgency=low
   * French update. Closes: #414597
   * Fix some broken logic in cgi creation of a subpage when a toplevel page
     with the same name already exists, and generally simplify the edit code.
+  * Make ikiwiki -verbose -setup with a setup file that enabled syslog logging
+    output the verbose build log to stdout, rather than to the syslog.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Mar 2007 18:25:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Mar 2007 19:31:31 -0400
 
 ikiwiki (1.45) unstable; urgency=low
 
