--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ ikiwiki (1.46) UNRELEASED; urgency=low
     with the same name already exists, and generally simplify the edit code.
   * Make ikiwiki -verbose -setup with a setup file that enabled syslog logging
     output the verbose build log to stdout, rather than to the syslog.
+  * Detect the case of two people independently creating the same page at the
+    same time, and let the second person resolve the conflict.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 17 Mar 2007 19:31:31 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Mar 2007 19:56:04 -0400
 
 ikiwiki (1.45) unstable; urgency=low
 
