--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -54,3 +54,6 @@ for all ikiwiki pages. --Pawel
 
 >>>> BTW, I also was thinkig about plugin to CVS support,
 >>>> but unfortunately I don't have too much free time. --Pawel
+
+>>>> You don't need a stylesheet-switching UI or a printer-friendly
+>>>> version; just link to a stylesheet with media="print". --[[JoshTriplett]]
