switch to titlepage template

--- a/doc/users.mdwn
+++ b/doc/users.mdwn
@@ -6,4 +6,4 @@ comments.
 
 List of users
 =============
-[[inline pages="users/*" feeds=no archive=yes sort=title]]
+[[inline pages="users/*" feeds=no archive=yes sort=title template=titlepage]]
