--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -57,3 +57,5 @@ for all ikiwiki pages. --Pawel
 
 >>>> You don't need a stylesheet-switching UI or a printer-friendly
 >>>> version; just link to a stylesheet with media="print". --[[JoshTriplett]]
+
+>>>>> Example? --[[Joey]]
