--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -1,3 +1,5 @@
+[[meta link="data:text/css,%23searchform%20%7Bdisplay%3Anone%3B%7D" rel="stylesheet" type="text/css" media="print"]]
+
 This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
