--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (1.47) UNRELEASED; urgency=low
+ikiwiki (1.47) unstable; urgency=low
 
   * Fix a security hole that allowed insertion of unsafe content via the meta
     plugins's support for inserting html link and meta tags. Now such content
