--- a/doc/examples/softwaresite/index.mdwn
+++ b/doc/examples/softwaresite/index.mdwn
@@ -4,6 +4,7 @@ your example program needs. This is its wiki.
 * [[download]]
 * [[news]]
 * [[documentation|doc]]
+* [[bugs]]
 * [[contact]]
 
 ----
