--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,7 @@ ikiwiki (1.48) UNRELEASED; urgency=low
     could make such PageSpecs match different things than before, if you
     relied on the old behavior of them only matching the raw link text.
   * This required changing the match_* interface, adding a third parameter.
-  * Allow link() PageSpecs to match relative, as is allowed with globs.a
+  * Allow link() PageSpecs to match relative, as is allowed with globs.
   * Add postform option to inline plugin.
   * Add an bug tracker to the softwaresite example.
 
