--- a/doc/examples/softwaresite.mdwn
+++ b/doc/examples/softwaresite.mdwn
@@ -8,6 +8,6 @@ Some additional configuration you might want to do:
 
 * The softwaresite/doc subdirectory is intended to hold docs about your
   software package. These docs can be included in the package itself;
-  there is a [[softwaresite/doc/Makefile]] that will use ikiwiki to build
-  static html documentation from the docs directory. ikiwiki itself uses a
-  similar system to build its documentation.
+  there is a [[softwaresite/Makefile]] that will use ikiwiki to build
+  static html documentation. ikiwiki itself uses a similar system to build
+  its documentation.
