* Make ikiwiki's stylesheet support printing by hiding parts of the page   that shouldn't appear in a printout: Search box, actions bar,   blog post form, tags, backlinks, and feed buttons.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,11 @@ ikiwiki (1.48) UNRELEASED; urgency=low
   * Allow link() PageSpecs to match relative, as is allowed with globs.
   * Add postform option to inline plugin.
   * Add an bug tracker to the softwaresite example.
+  * Make ikiwiki's stylesheet support printing by hiding parts of the page
+    that shouldn't appear in a printout: Search box, actions bar,
+    blog post form, tags, backlinks, and feed buttons.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2007 16:58:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2007 19:46:32 -0400
 
 ikiwiki (1.47) unstable; urgency=low
 
