--- a/doc/todo/Print_link.mdwn
+++ b/doc/todo/Print_link.mdwn
@@ -69,3 +69,5 @@ for all ikiwiki pages. --Pawel
 >>>>> [used inside a style sheet](http://www.w3.org/TR/REC-CSS2/media.html),
 >>>>> so the thing to do would be to edit style.css to automatically disable parts 
 >>>>> not wanted when printing. That would rock. --[[Joey]]
+
+Yay! I've modified the stylesheet and this is [[done]]. --[[Joey]]
